--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -6,18 +6,18 @@
     <string name="title_tab_0">Клиенты</string>
     <string name="title_tab_1">Новый клиент</string>
     <string name="hello_world">Hello</string>
-    <string name="first_name">Имя</string>
+    <string name="first_name">Имя родителя</string>
     <string name="second_name">Фамилия</string>
     <string name="save_new_client">Сохранить</string>
     <string name="enter_phone_number">Тел. номер</string>
     <string name="enter_second_name">Введите фамилию</string>
     <string name="sync">Синхронизировать</string>
     <string name="patronymic_name">Отчество</string>
-    <string name="set_birth_day">День рождения:</string>
+    <string name="set_birth_day">ДР:</string>
     <string name="ok">Ok</string>
     <string name="date">2014-02-01</string>
     <string name="add_new_client">Добавить нового клиента</string>
-    <string name="first_name_is_mandatory_to_fill_in">Необходимо ввести имя</string>
+    <string name="first_name_is_mandatory_to_fill_in">Необходимо ввести имя родителя</string>
     <string name="second_name_is_mandatory_to_fill_in">Необходимо ввести фамилию</string>
     <string name="phone_number_is_to_short">Номер тел. короткий</string>
     <string name="photo_is_mandatory">Необходимо сделать фото</string>
@@ -30,4 +30,6 @@
     <string name="second_name_test">Second name test</string>
     <string name="app_name">Клиенты</string>
     <string name="client_saved_success">Клиент успешно сохранен!</string>
+    <string name="child_first_name">Имя ребенка</string>
+    <string name="child_first_name_is_mandatory_to_fill_in">Необходимо ввести имя ребенка</string>
 </resources>
