--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -32,4 +32,5 @@
     <string name="client_saved_success">Клиент успешно сохранен!</string>
     <string name="child_first_name">Имя ребенка</string>
     <string name="child_first_name_is_mandatory_to_fill_in">Необходимо ввести имя ребенка</string>
+    <string name="choose_color">Выберите цвет</string>
 </resources>
