--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="sync">Sync</string>
     <string name="patronymic_name">Patronymic name</string>
     <string name="set_birth_day">BD:</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="date">2014-02-01</string>
     <string name="add_new_client">Add new client</string>
     <string name="first_name_is_mandatory_to_fill_in">First name is mandatory to fill in</string>
@@ -33,4 +33,5 @@
     <string name="child_first_name">Child first name</string>
     <string name="child_first_name_is_mandatory_to_fill_in">First name is mandatory to fill in</string>
     <string name="choose_color">Choose color</string>
+    <string name="сancel">Cancel</string>
 </resources>
