--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,5 @@
     <string name="child_first_name">Child first name</string>
     <string name="child_first_name_is_mandatory_to_fill_in">First name is mandatory to fill in</string>
     <string name="choose_color">Choose color</string>
-    <string name="сancel">Cancel</string>
+    <string name="abort">Cancel</string>
 </resources>
