--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="child_first_name_is_mandatory_to_fill_in">First name is mandatory to fill in</string>
     <string name="choose_color">Choose color</string>
     <string name="abort">Cancel</string>
+    <string name="found_clients">Found clients</string>
 </resources>
