--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -38,4 +38,5 @@
     <string name="last_visited">Последнее посещение:</string>
     <string name="text_example">2014-02-01</string>
     <string name="visit_button">Visit</string>
+    <string name="client_already_visited">Клиент уже был сегодня!</string>
 </resources>
