--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -51,4 +51,6 @@
     <string name="syncing_finished_success">Синхронизация успешно завершена.</string>
     <string name="syncing_failed">Ошибка при синхронизации.</string>
     <string name="visits">Посещений:</string>
+    <string name="sync_url">Cинхр. URL</string>
+    <string name="https_protocol">http://www.</string>
 </resources>
