--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -52,6 +52,6 @@
     <string name="syncing_failed">Ошибка при синхронизации.</string>
     <string name="visits">Посещений:</string>
     <string name="sync_url">Cинхр. URL</string>
-    <string name="https_protocol">http://www.</string>
+    <string name="https_protocol">https://www.</string>
     <string name="visit_dialog_message">Измените максимальное кол-во визитов.</string>
 </resources>
