--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,6 @@
     <string name="syncing_failed">Syncing is failed</string>
     <string name="visits">Visits:</string>
     <string name="sync_url">Sync URL</string>
-    <string name="https_protocol" translatable="false">https://www.</string>
+    <string name="https_protocol">https://www.</string>
     <string name="visit_dialog_message">Change max visits amount.</string>
 </resources>
