--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,11 @@
     <string name="sync_url">Sync URL</string>
     <string name="https_protocol">https://www.</string>
     <string name="visit_dialog_message">Change max visits amount.</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="settings">Settings</string>
+    <string name="error_settings_domain">Domain is not valid</string>
+    <string name="error_settings_login">Login should be more than 5 symbols.</string>
+    <string name="error_settings_password">Password should be more than 5 symbols.</string>
+    <string name="error_settings_all">Need to set credentials before sync.</string>
 </resources>
